Fix scrollbar on all site and customize, add condition to getprojectbyid and postlogbyid for the fake project

--- a/client/src/components/Board/Main/Contact/Contact.scss
+++ b/client/src/components/Board/Main/Contact/Contact.scss
@@ -225,7 +225,6 @@
 				text-align: center;
 				text-overflow: ellipsis;
 				white-space: nowrap;
-				overflow: scroll;
 			}
 			&_right {
 				width: 80%;
@@ -267,7 +266,6 @@
 				text-align: center;
 				text-overflow: ellipsis;
 				white-space: nowrap;
-				overflow: scroll;
 			}
 			&_right {
 				width: 50%;
